# pdf_stream_extractor_cli

./: .gitignore  Makefile.am  README.md  config.h  configure.ac  configure~  file_ext.c  file_ext.h  pdf_stream_extract.c
src/: Makefile.am  ext.c  ext.h  file_ext.c  file_ext.h  pdf_stream_extract.c  pse.c  stream_scanner.c  stream_scanner.h  zpipe.c
src/buffer/: configure.ac
src/buffer/src/: buffer.c  buffer.h
src/ext/: Makefile.am  ext.c  ext.h
src/filext/: configure.ac
src/filext/src/: Makefile.am  filext.c  filext.h
src/ioutils/: .gitignore  Makefile.am  configure.ac  ioutils.c  ioutils.h
src/ioutils/src/: Makefile.am  ioutils.c  ioutils.h
src/zlib/: Makefile.am  configure.ac  gzguts.h
